# community-templates

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  config.example.toml  docker-compose.yml  fly.toml  renovate.json
.cargo/: audit.toml
.github/workflows/: audit.yml  docker.yml  pr-check.yml  pr_signed_commits_check.yml
migrations/: 001_initial.sql  002_metadata_commit_hash_supersedes.sql  003_split_curation.sql  004_metadata_functions.sql
server/: Cargo.toml
server/src/: config.rs  error.rs  main.rs
server/src/api/: admin.rs  auth.rs  metadata.rs  mod.rs  search.rs  templates.rs
server/src/db/: admins.rs  metadata.rs  mod.rs  sync_state.rs  templates.rs
server/src/sync/: indexer.rs
web/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  main.tsx
web/src/api/: client.ts
web/src/components/: AdminNav.tsx  CategorySelect.tsx  FunctionSignature.tsx  Header.tsx  Layout.tsx  RequireAuth.tsx  SafeImage.tsx  TagInput.tsx  TemplateCard.tsx
web/src/pages/: AuthorPage.tsx  Home.tsx  SearchResults.tsx  TemplatePage.tsx
web/src/pages/admin/: AdminUsers.tsx  BlacklistManager.tsx  Dashboard.tsx  FeaturedManager.tsx  Login.tsx
web/src/styles/: global.scss
