[package]
name = "ootle-community-templates"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"

[dependencies]
tari_ootle_template_metadata = { version = "0.5", features = ["json"] }
tari_engine_types = "0.28.4"
tari_crypto = "0.22.1"

anyhow = "1"
argon2 = "0.5"
axum = { version = "0.8", features = ["macros"] }
blake2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
hex = "0.4"
jsonwebtoken = "9"
rand = "0.9"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "json", "chrono"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }